{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 290,
  "lineage": "bc2fe3b4-31d4-bcf6-23e5-a4e37c9cfffc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0026f1ae67eb3464c",
            "association_id": "eipassoc-053114d239f49bbf1",
            "domain": "vpc",
            "id": "eipalloc-0026f1ae67eb3464c",
            "instance": "i-0db77afdbf5b2797d",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-085c8b09b7cc20e83",
            "private_dns": "ip-10-0-4-13.ap-southeast-1.compute.internal",
            "private_ip": "10.0.4.13",
            "public_dns": "ec2-13-215-108-123.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.108.123",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natelb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05534b13d409bbed0",
            "association_id": "eipassoc-011ae910ffb2dad78",
            "domain": "vpc",
            "id": "eipalloc-05534b13d409bbed0",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-00003579fb6ebed9b",
            "private_dns": "ip-10-0-0-253.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.253",
            "public_dns": "ec2-52-74-37-131.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.37.131",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "myelb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:419804155287:loadbalancer/myelb1",
            "availability_zones": [
              "ap-southeast-1a",
              "ap-southeast-1b",
              "ap-southeast-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "myelb1-1660535231.ap-southeast-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "myelb1",
            "idle_timeout": 60,
            "instances": [
              "i-007f2917f22da1f57",
              "i-07e8db10a92949dc5"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "myelb1",
            "security_groups": [
              "sg-0e27bdc8531e06436"
            ],
            "source_security_group": "419804155287/default",
            "source_security_group_id": "sg-0e27bdc8531e06436",
            "subnets": [
              "subnet-098153ef255c1aaed",
              "subnet-0d0db195fbd8f5c20",
              "subnet-0dac8041c0ffcf4ac"
            ],
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_subnet.sub1",
            "aws_subnet.sub2",
            "aws_subnet.sub3",
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "i1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07315f74f3fa6a5a3",
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:instance/i-007f2917f22da1f57",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007f2917f22da1f57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04b3f3fb933db62b4",
            "private_dns": "ip-10-0-3-246.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d428d03ccc11868c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce3ad7b52f9417d8",
            "tags": {
              "Name": "pandaggo"
            },
            "tags_all": {
              "Name": "pandaggo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-064a1172499996b3e"
            ]
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.sub4",
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "i2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07315f74f3fa6a5a3",
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:instance/i-07e8db10a92949dc5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e8db10a92949dc5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-034b10b52059a7fbb",
            "private_dns": "ip-10-0-4-40.ap-southeast-1.compute.internal",
            "private_ip": "10.0.4.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c59341b2cd90a339",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c2306edc7fbf0ba",
            "tags": {
              "Name": "pandaggo"
            },
            "tags_all": {
              "Name": "pandaggo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-064a1172499996b3e"
            ]
          },
          "dependencies": [
            "aws_vpc.kpr",
            "aws_security_group.sg1",
            "aws_subnet.sub5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "i8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07315f74f3fa6a5a3",
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:instance/i-0db77afdbf5b2797d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db77afdbf5b2797d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-085c8b09b7cc20e83",
            "private_dns": "ip-10-0-4-13.ap-southeast-1.compute.internal",
            "private_ip": "10.0.4.13",
            "public_ip": "13.215.108.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09112f62dad7f6aa0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c2306edc7fbf0ba",
            "tags": {
              "Name": "myyy"
            },
            "tags_all": {
              "Name": "myyy"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e27bdc8531e06436"
            ]
          },
          "dependencies": [
            "aws_subnet.sub5",
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:internet-gateway/igw-089764642f0ad2654",
            "id": "igw-089764642f0ad2654",
            "owner_id": "419804155287",
            "tags": {
              "Name": "kpr"
            },
            "tags_all": {
              "Name": "kpr"
            },
            "vpc_id": "vpc-08d442d1599086020"
          },
          "dependencies": [
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05534b13d409bbed0",
            "connectivity_type": "public",
            "id": "nat-079a2e026c9e58ba6",
            "network_interface_id": "eni-00003579fb6ebed9b",
            "private_ip": "10.0.0.253",
            "public_ip": "52.74.37.131",
            "subnet_id": "subnet-0dac8041c0ffcf4ac",
            "tags": {
              "Name": "my nat"
            },
            "tags_all": {
              "Name": "my nat"
            }
          },
          "dependencies": [
            "aws_eip.natelb",
            "aws_subnet.sub1",
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt11",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:route-table/rtb-0e47ba09fc69dc8c2",
            "id": "rtb-0e47ba09fc69dc8c2",
            "owner_id": "419804155287",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089764642f0ad2654",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt1"
            },
            "tags_all": {
              "Name": "rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d442d1599086020"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:route-table/rtb-00b0923f640903acc",
            "id": "rtb-00b0923f640903acc",
            "owner_id": "419804155287",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-079a2e026c9e58ba6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt2"
            },
            "tags_all": {
              "Name": "rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d442d1599086020"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.sub1",
            "aws_vpc.kpr",
            "aws_eip.natelb",
            "aws_nat_gateway.nat1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09864a85886f1897c",
            "route_table_id": "rtb-0e47ba09fc69dc8c2",
            "subnet_id": "subnet-0dac8041c0ffcf4ac"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt11",
            "aws_subnet.sub1",
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8bbf57ad9ac90e6",
            "route_table_id": "rtb-0e47ba09fc69dc8c2",
            "subnet_id": "subnet-098153ef255c1aaed"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt11",
            "aws_subnet.sub2",
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e13ce7ea5427d317",
            "route_table_id": "rtb-0e47ba09fc69dc8c2",
            "subnet_id": "subnet-0d0db195fbd8f5c20"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt11",
            "aws_subnet.sub3",
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056583c2259589157",
            "route_table_id": "rtb-00b0923f640903acc",
            "subnet_id": "subnet-0ce3ad7b52f9417d8"
          },
          "dependencies": [
            "aws_subnet.sub1",
            "aws_subnet.sub4",
            "aws_vpc.kpr",
            "aws_eip.natelb",
            "aws_nat_gateway.nat1",
            "aws_route_table.rt2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de4b5bd37f8ff6be",
            "route_table_id": "rtb-00b0923f640903acc",
            "subnet_id": "subnet-09c2306edc7fbf0ba"
          },
          "dependencies": [
            "aws_eip.natelb",
            "aws_nat_gateway.nat1",
            "aws_route_table.rt2",
            "aws_subnet.sub1",
            "aws_subnet.sub5",
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044bf5d741d03d22d",
            "route_table_id": "rtb-00b0923f640903acc",
            "subnet_id": "subnet-0c74f3f50cc96f881"
          },
          "dependencies": [
            "aws_subnet.sub1",
            "aws_subnet.sub6",
            "aws_vpc.kpr",
            "aws_eip.natelb",
            "aws_nat_gateway.nat1",
            "aws_route_table.rt2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:security-group/sg-064a1172499996b3e",
            "description": "mysg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064a1172499996b3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mysg",
            "name_prefix": "",
            "owner_id": "419804155287",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08d442d1599086020"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1060026155",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-064a1172499996b3e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1475758684",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-064a1172499996b3e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kpr",
            "aws_security_group.sg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:subnet/subnet-0dac8041c0ffcf4ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dac8041c0ffcf4ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419804155287",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mysub1"
            },
            "tags_all": {
              "Name": "mysub1"
            },
            "vpc_id": "vpc-08d442d1599086020"
          },
          "dependencies": [
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:subnet/subnet-098153ef255c1aaed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098153ef255c1aaed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419804155287",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mysub2"
            },
            "tags_all": {
              "Name": "mysub2"
            },
            "vpc_id": "vpc-08d442d1599086020"
          },
          "dependencies": [
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:subnet/subnet-0d0db195fbd8f5c20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0db195fbd8f5c20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419804155287",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mysub3"
            },
            "tags_all": {
              "Name": "mysub3"
            },
            "vpc_id": "vpc-08d442d1599086020"
          },
          "dependencies": [
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:subnet/subnet-0ce3ad7b52f9417d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce3ad7b52f9417d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419804155287",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mysub4"
            },
            "tags_all": {
              "Name": "mysub4"
            },
            "vpc_id": "vpc-08d442d1599086020"
          },
          "dependencies": [
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:subnet/subnet-09c2306edc7fbf0ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c2306edc7fbf0ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419804155287",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mysub5"
            },
            "tags_all": {
              "Name": "mysub5"
            },
            "vpc_id": "vpc-08d442d1599086020"
          },
          "dependencies": [
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:subnet/subnet-0c74f3f50cc96f881",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c74f3f50cc96f881",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419804155287",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mysub5"
            },
            "tags_all": {
              "Name": "mysub5"
            },
            "vpc_id": "vpc-08d442d1599086020"
          },
          "dependencies": [
            "aws_vpc.kpr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kpr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:419804155287:vpc/vpc-08d442d1599086020",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0171a2fedb64719d4",
            "default_route_table_id": "rtb-007dab91781d46cf4",
            "default_security_group_id": "sg-0e27bdc8531e06436",
            "dhcp_options_id": "dopt-035173a3ecc719771",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08d442d1599086020",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007dab91781d46cf4",
            "owner_id": "419804155287",
            "tags": {
              "Name": "kpr1"
            },
            "tags_all": {
              "Name": "kpr1"
            }
          }
        }
      ]
    }
  ]
}